--- a/tomy/package.json
+++ b/tomy/package.json
@@ -16,11 +16,12 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.10",
     "next": "14.2.5",
     "postcss": "8.4.40",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-parallax-tilt": "^1.7.248",
     "react-player": "^2.16.0",
     "tailwindcss": "3.4.6",
     "typescript": "5.5.4",
