--- a/tomy/package.json
+++ b/tomy/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.19",
     "framer-motion": "^11.11.10",
     "next": "14.2.5",
+    "next-cloudinary": "^6.16.0",
     "postcss": "8.4.40",
     "react": "18.3.1",
     "react-dom": "18.3.1",
