--- a/tomy/package.json
+++ b/tomy/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
     "@types/node": "20.14.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -25,7 +27,11 @@
     "react-parallax-tilt": "^1.7.248",
     "react-player": "^2.16.0",
     "tailwindcss": "3.4.6",
+    "three": "^0.169.0",
     "typescript": "5.5.4",
     "video.js": "^8.17.1"
+  },
+  "devDependencies": {
+    "@types/three": "^0.169.0"
   }
 }
