--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
+    "react-animations": "^1.0.0",
+    "styled-components": "^6.1.13",
     "three": "^0.169.0",
     "webpack-hot-middleware": "^2.26.1"
   }
