--- a/tomy/package.json
+++ b/tomy/package.json
@@ -22,6 +22,8 @@
     "framer-motion": "^11.11.10",
     "next": "14.2.5",
     "next-cloudinary": "^6.16.0",
+    "p5": "^1.11.2",
+    "p5.sound": "^0.1.0",
     "postcss": "8.4.40",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -33,6 +35,7 @@
     "video.js": "^8.17.1"
   },
   "devDependencies": {
+    "@types/p5": "^1.7.6",
     "@types/three": "^0.169.0"
   }
 }
