--- a/tomy/tsconfig.json
+++ b/tomy/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["./node_modules/@types", "./src/types", "./types"],
     "types": ["p5"],
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
