--- a/tomy/package.json
+++ b/tomy/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "3.4.6",
     "three": "^0.169.0",
     "typescript": "5.5.4",
+    "vanta": "^0.5.24",
     "video.js": "^8.17.1"
   },
   "devDependencies": {
