--- a/tomy/tsconfig.json
+++ b/tomy/tsconfig.json
@@ -21,9 +21,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/dist/*": ["./src/dist/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src", "src/types/vanta.d.ts"],
   "exclude": ["node_modules"]
 }
