--- a/tomy/package.json
+++ b/tomy/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -19,12 +20,16 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.10",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "next": "14.2.5",
     "next-cloudinary": "^6.16.0",
     "ngrok": "^5.0.0-beta.2",
     "p5": "^1.11.2",
     "p5.sound": "^0.1.0",
+    "pdf-lib": "^1.17.1",
     "postcss": "8.4.40",
     "react": "18.3.1",
     "react-dom": "18.3.1",
