--- a/tomy/package.json
+++ b/tomy/package.json
@@ -27,6 +27,7 @@
     "next": "14.2.5",
     "next-cloudinary": "^6.16.0",
     "ngrok": "^5.0.0-beta.2",
+    "nodemailer": "^6.10.0",
     "p5": "^1.11.2",
     "p5.sound": "^0.1.0",
     "pdf-lib": "^1.17.1",
