--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
+    "ffmpeg": "^0.0.4",
     "nodemailer": "^6.10.0",
     "react-animations": "^1.0.0",
     "styled-components": "^6.1.13",
