--- a/tomy/package.json
+++ b/tomy/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -21,6 +22,7 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "emailjs-com": "^3.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.11.10",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
