--- a/tomy/package.json
+++ b/tomy/package.json
@@ -20,6 +20,7 @@
     "@types/node": "20.14.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.19",
     "emailjs-com": "^3.2.0",
     "fluent-ffmpeg": "^2.1.3",
